--- a/index.html
+++ b/index.html
@@ -3,37 +3,39 @@
 
   <head>
     <title>José Roberto Pinto da Silva, PhD</title>
-
   </head>
 
   <body>
-    <img src="./jose.JPG" height=200 width=150/>
+
+    <p style="text-align:center;"><img src="./jose.JPG" height=200px width=300px/></p>
     <h1>José Roberto Pinto da Silva, PhD</h1>
 
-    <h3>Quem Sou Eu</h3>
-      <p>Nascido em Santiago, RS - sou um engenheiro eletricista, PhD e MBA - com ênfase em <strong><em>Sistema de Potência e Sistema de Controle</strong></em>.
-      <br>Filho de militar, decidi entrar na escola militar ainda quando pequeno, onde aprendi à seguir ordem e ser independente. Por mais que
-      minha família quisesse que eu seguisse nesse rumo, meus planos eram outros, então decidi trocar a carreira militar pela carreira de engenheiro.
+    <article>
+      <h3>Quem Sou Eu</h3>
+        <p>Nascido em Santiago, RS - sou um engenheiro eletricista, PhD e MBA - com ênfase em <strong><em>Sistema de Potência e Sistema de Controle</strong></em>.
+        <br>Filho de militar, decidi entrar na escola militar ainda quando pequeno, onde aprendi à seguir ordem e ser independente. Por mais que
+        minha família quisesse que eu seguisse nesse rumo, meus planos eram outros, então decidi trocar a carreira militar pela carreira de engenheiro.
 
-      <br><br>Comecei meus estudos de <strong>Engenharia Elétrica</strong> na <em>Universidade Federal do Paraná</em>.
-      Enquanto isso, eu fui estagiário em diferentes empresas, e tive uma variadade de cargos importantes. De programador à gerente
-      de projeto, sempre fiz meu trabalho do melhor jeito possível, me comunicando bem com outros funcionários e trazendo a melhor solução possível
-      ao problema. Após isso, decidi continuar meus estudos, realizei meu mestrado, doutourado, MBA e outros
-      cursos de liderança.
+        <br><br>Comecei meus estudos de <strong>Engenharia Elétrica</strong> na <em>Universidade Federal do Paraná</em>.
+        Enquanto isso, eu fui estagiário em diferentes empresas, e tive uma variadade de cargos importantes. De programador à gerente
+        de projeto, sempre fiz meu trabalho do melhor jeito possível, me comunicando bem com outros funcionários e trazendo a melhor solução possível
+        ao problema. Após isso, decidi continuar meus estudos, realizei meu mestrado, doutourado, MBA e outros
+        cursos de liderança.
 
-      <br><br>Enquanto estudante ainda, virei assistente de professor na universidade, e assim comecei minha carreira como professor. Dei aula
-      de matérias de Engenharia Elétrica por 41 anos na UFPR, onde fui homenageado. Também dei aula na Universidade Positivo como professor de Pós-graduação
-      e em seminários internacionais.
-      <br><a href="./materias.html" target="_blank">Matérias Ensinadas</a>
+        <br><br>Enquanto estudante ainda, virei assistente de professor na universidade, e assim comecei minha carreira como professor. Dei aula
+        de matérias de Engenharia Elétrica por 41 anos na UFPR, onde fui homenageado. Também dei aula na Universidade Positivo como professor de Pós-graduação
+        e em seminários internacionais.
+        <br><a href="./materias.html" target="_blank">Matérias Ensinadas</a>
 
-      <br><br>Minha carreira como engenheiro começou ainda como estudante - na Metalúrgica Guaíra. Depois de trabalhar em outras empresas de renome,
-      decidi seguir minha carreira na COPEL Transmissão e Geração S.A. Na COPEL, fui <em>Engenheiro Senior</em> e trabalhei por 41 anos. Gerente, supervisor de área,
-      e entre outros, foram cargos que trabalhei durante meu tempo na empresa - além da área técnica.
+        <br><br>Minha carreira como engenheiro começou ainda como estudante - na Metalúrgica Guaíra. Depois de trabalhar em outras empresas de renome,
+        decidi seguir minha carreira na COPEL Transmissão e Geração S.A. Na COPEL, fui <em>Engenheiro Senior</em> e trabalhei por 41 anos. Gerente, supervisor de área,
+        e entre outros, foram cargos que trabalhei durante meu tempo na empresa - além da área técnica.
 
-      <br><br>Também sou autor e co-autor de artigos técnicos, participando de seminários, congressos e cursos pelo <a href="CIGRÉ">CIGRÉ Brasil</a> e membro
-      do <a href="COomite">Comitê de Análise de Projetos em Pesquisa e Desenvolvimento</a>.
+        <br><br>Também sou autor e co-autor de artigos técnicos, participando de seminários, congressos e cursos pelo <a href="https://www.cigre.org/" target="_blank">CIGRÉ Brasil</a> e membro
+        do <em>Comitê de Análise de Projetos em Pesquisa e Desenvolvimento</em>.
+    </article>
 
-    <div id="estudo">
+    <section id="estudo">
     <h3>Qualificações</h3>
       <h5>Durante minha carreira profissional, eu conquistei diversos títulos e prêmios. Minhas quaificações por meio de estudo são:</h5>
 
@@ -58,9 +60,9 @@
           <a href="https://www.haggai-international.org/" target="_blank"><img src="Haggai.png"  height=130 width=200/></a>
 
         </ul>
-    </div>
+    </section>
 
-    <div id="trabalhos">
+    <section id="trabalhos">
     <h3>Onde Trabalhei?</h3>
       <ul>
         <li>Metalúrgica Guaíra</li>
@@ -70,9 +72,9 @@
         <li>Copel Geração S.A.</li>
         <li>Universidade Positivo</li>
       </ul>
-    </div>
+    </section>
 
-    <div id="projetos">
+    <section id="projetos">
     <h3>Trabalhos Importantes</h3>
       <h5>Durante minha carreira, fiz parte de grandes trabalhos e projetos, porém os meus favoritos foram:</h5>
         <ul>
@@ -82,9 +84,9 @@
           <li>Gerente de Pesquisa e Desenvolvimento</li>
           <li>Participação e elaboração do Projeto de Transmissão de Energia Elétrica - Energia Renovável</li>
         </ul>
-    </div>
+    </section>
 
-    <div id="atividades">
+    <section id="atividades">
     <h3>Atividades Presente?</h3>
       <h5>Atualmente minhas atividades favoritas são:</h5>
         <ul>
@@ -93,16 +95,16 @@
           <li>Jogar futebol</li>
           <li>Ver meu filho, filha e netos</li>
         </ul>
-    </div>
+    </section>
 
   </body>
 
   <footer>
-    <div id="contact">
+    <section id="contact">
       <h3>Para entrar em contato comigo:</h3>
         <a href="mailto:josejrps@gmail.com" target="_blank"><button>Entre em Contato</button></a>
         <a href="./Resume.pdf" download="Resume"><button>Download my Resumé</button></a>
-    </div>
+    </section>
   </footer>
 
 </html>
