--- a/materias.html
+++ b/materias.html
@@ -1,15 +1,21 @@
-<table>
-  <tr>
-    <td>Universidade Federal:</td>
-    <td>Sistema de Potência</td>
-    <td>Sistema de Controle Linear - Conrole e Servomecânismos</td>
-    <td>Sistema de Controle Aplicado à Geração e Transmissão de Energia Elétrica</td>
-    <td>Máquinas Elétricas</td>
-  </tr>
+<table border="1">
 
-  <tr>
-    <td>Universidade Positivo:</td>
-    <td>Energias Renováveis</td>
-  </tr>
+  <thead>
+  </thead>
+
+  <tbody>
+    <tr>
+      <th scope="row"><em>Universidade Federal: </em></th>
+      <td>Sistema de Potência</td>
+      <td>Sistema de Controle Linear - Conrole e Servomecânismos</td>
+      <td>Sistema de Controle Aplicado à Geração e Transmissão de Energia Elétrica</td>
+      <td>Máquinas Elétricas</td>
+    </tr>
+
+    <tr>
+      <th scope="row"><em>Universidade Positivo: </em></th>
+      <td>Energias Renováveis</td>
+    </tr>
+  </tbody>
 
 </table>
