--- a/index.html
+++ b/index.html
@@ -3,15 +3,35 @@
 
   <head>
     <title>José Roberto Pinto da Silva, PhD</title>
+    <link href="./stylesheet.css" rel="stylesheet"/>
   </head>
 
-  <body>
+<body>
 
-    <p style="text-align:center;"><img src="./jose.JPG" height=200px width=300px/></p>
-    <h1>José Roberto Pinto da Silva, PhD</h1>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#quem">Quem Sou Eu</a></li>
+        <li><a href="#estudo">Qualificações</a></li>
+        <li><a href="#trabalhos">Onde Trabalhei</a></li>
+        <li><a href="#projetos">Trabalhos Importantes</a></li>
+        <li><a href="#atividades">Atividades Presente</a></li>
+        <li><a href="#contato">Contato</a></li>
+    </nav>
 
-    <article>
-      <h3>Quem Sou Eu</h3>
+  </header>
+
+  <div class="topo">
+    <div class="cara">
+      <img src="./jose.jpg"/>
+      <h1><em>José Roberto Pinto da Silva, PhD</em></h1>
+      <a href="english" target="_blank"><button class="botao_topo">English</button></a>
+      <a href="curriculo" download="curriculo"><button class="botao_topo">Currículo</button></a>
+    </div>
+  </div>
+
+    <section id="quem">
+      <h2>Quem Sou Eu</h2>
         <p>Nascido em Santiago, RS - sou um engenheiro eletricista, PhD e MBA - com ênfase em <strong><em>Sistema de Potência e Sistema de Controle</strong></em>.
         <br>Filho de militar, decidi entrar na escola militar ainda quando pequeno, onde aprendi à seguir ordem e ser independente. Por mais que
         minha família quisesse que eu seguisse nesse rumo, meus planos eram outros, então decidi trocar a carreira militar pela carreira de engenheiro.
@@ -25,45 +45,50 @@
         <br><br>Enquanto estudante ainda, virei assistente de professor na universidade, e assim comecei minha carreira como professor. Dei aula
         de matérias de Engenharia Elétrica por 41 anos na UFPR, onde fui homenageado. Também dei aula na Universidade Positivo como professor de Pós-graduação
         e em seminários internacionais.
-        <br><a href="./materias.html" target="_blank">Matérias Ensinadas</a>
+
+
+        <br><a href="./materias.html" target="_blank"><button class="button_materias">Matérias Ensinadas</button></a><br>
 
         <br><br>Minha carreira como engenheiro começou ainda como estudante - na Metalúrgica Guaíra. Depois de trabalhar em outras empresas de renome,
         decidi seguir minha carreira na COPEL Transmissão e Geração S.A. Na COPEL, fui <em>Engenheiro Senior</em> e trabalhei por 41 anos. Gerente, supervisor de área,
         e entre outros, foram cargos que trabalhei durante meu tempo na empresa - além da área técnica.
 
         <br><br>Também sou autor e co-autor de artigos técnicos, participando de seminários, congressos e cursos pelo <a href="https://www.cigre.org/" target="_blank">CIGRÉ Brasil</a> e membro
-        do <em>Comitê de Análise de Projetos em Pesquisa e Desenvolvimento</em>.
-    </article>
+        do <em>Comitê de Análise de Projetos em Pesquisa e Desenvolvimento</em>.<br><br>
+    </section>
 
     <section id="estudo">
-    <h3>Qualificações</h3>
-      <h5>Durante minha carreira profissional, eu conquistei diversos títulos e prêmios. Minhas quaificações por meio de estudo são:</h5>
+    <h2>Qualificações</h2>
+      <h3>Durante minha carreira profissional, eu conquistei diversos títulos e prêmios. Minhas qualificações por meio de estudo são:</h3>
+          <article>
+          <ul>
+            <li><a href="https://www.ufpr.br/portalufpr/" target="_blank"><img src="./ufpr.png" height=130 width=130/></a><br>
+            <p>Bachelorado em Engenharia Elétrica</p></li>
 
-        <ul>
-          <li>Bachelorado em Engenharia Elétrica</li>
-          <a href="https://www.ufpr.br/portalufpr/" target="_blank"><img src="./ufpr.png" height=130 width=130/></a><br>
 
-          <li>Mestrado em Engenharia Elétrica</li>
-          <a href="https://ufsc.br/" target="_blank"><img src="./ufsc.png" heigh=130 width=130/></a><br>
+            <li><a href="https://ufsc.br/" target="_blank"><img src="./ufsc.png" heigh=130 width=130/></a><br>
+            <p>Mestrado em Engenharia Elétrica</p></li>
 
-          <li>Doutorado em Engenharia Elétrica</li>
-          <a href="https://unifei.edu.br/" target="_blank"><img src="./EFEI.png" heigh=130 width=130/></a>
 
-          <li>MBA em economia</li>
-          <a href="https://pos.fae.edu/curitiba" target="_blank"><img src="./fae.png" height=130 width=130/></a>
+            <li><a href="https://unifei.edu.br/" target="_blank"><img src="./EFEI.png" heigh=130 width=130/></a>
+            <p>Doutorado em Engenharia Elétrica</p></li>
 
-          <li>MBA em administração</li>
-          <a href="https://www.pucpr.br/" target="_blank"><img src="./Pucpr.jpeg" height=130 width=130/></a>
-          <a href="Universidade do texas" target="_blank"><img src="texas.png"  height=130 width=130/></a>
+            <li><a href="https://pos.fae.edu/curitiba" target="_blank"><img src="./fae.png" height=130 width=130/></a>
+            <p>MBA em economia</p></li>
 
-          <li>Seminário de Liderança</li>
-          <a href="https://www.haggai-international.org/" target="_blank"><img src="Haggai.png"  height=130 width=200/></a>
+            <li><a href="https://www.pucpr.br/" target="_blank"><img src="./Pucpr.jpeg" height=130 width=130/></a>
+            <a href="Universidade do texas" target="_blank"><img src="texas.png"  height=130 width=130/></a>
+            <p>MBA em administração</p></li>
 
-        </ul>
+            <li><a href="https://www.haggai-international.org/" target="_blank"><img src="Haggai.png"  height=130 width=200/></a>
+            <p>Seminário de Liderança</p></li>
+
+          </ul>
+        </article>
     </section>
 
     <section id="trabalhos">
-    <h3>Onde Trabalhei?</h3>
+    <h2>Onde Trabalhei?</h2>
       <ul>
         <li>Metalúrgica Guaíra</li>
         <li>IBM</li>
@@ -75,8 +100,8 @@
     </section>
 
     <section id="projetos">
-    <h3>Trabalhos Importantes</h3>
-      <h5>Durante minha carreira, fiz parte de grandes trabalhos e projetos, porém os meus favoritos foram:</h5>
+    <h2>Trabalhos Importantes</h2>
+      <h3>Durante minha carreira, fiz parte de grandes trabalhos e projetos, porém os meus favoritos foram:</h3>
         <ul>
           <li>Plano e Operação de Sistemas Elétricos de Potência</li>
           <li>Plano de Expansão da Transmição de Sistemas Elétricos de Potência</li>
@@ -87,8 +112,8 @@
     </section>
 
     <section id="atividades">
-    <h3>Atividades Presente?</h3>
-      <h5>Atualmente minhas atividades favoritas são:</h5>
+    <h2>Atividades Presente?</h2>
+      <h3>Atualmente minhas atividades favoritas são:</h3>
         <ul>
           <li>Passar tempo com minha esposa</li>
           <li>Viajar</li>
@@ -97,14 +122,14 @@
         </ul>
     </section>
 
-  </body>
+    <footer>
+      <section id="contato">
+        <h2>Para entrar em contato comigo:</h2>
+          <a href="mailto:josejrps@gmail.com" target="_blank"><button>Entre em Contato</button></a>
+          <a href="http://lattes.cnpq.br/9257650962986363" target="_blank"><button>Currículo Lattes</button></a>
+      </section>
+    </footer>
 
-  <footer>
-    <section id="contact">
-      <h3>Para entrar em contato comigo:</h3>
-        <a href="mailto:josejrps@gmail.com" target="_blank"><button>Entre em Contato</button></a>
-        <a href="./Resume.pdf" download="Resume"><button>Download my Resumé</button></a>
-    </section>
-  </footer>
+  </body>
 
 </html>
