--- a/index.html
+++ b/index.html
@@ -119,14 +119,23 @@
           <li>Viajar</li>
           <li>Jogar futebol</li>
           <li>Ver meu filho, filha e netos</li>
+          <a href="fun.html" target="_blank"><button class="botao_atividades">Saber Mais</button></a>
         </ul>
     </section>
 
     <footer>
       <section id="contato">
+
+        <div class="entrar_contato">
         <h2>Para entrar em contato comigo:</h2>
           <a href="mailto:josejrps@gmail.com" target="_blank"><button>Entre em Contato</button></a>
           <a href="http://lattes.cnpq.br/9257650962986363" target="_blank"><button>Currículo Lattes</button></a>
+        </div>
+
+        <div class="media_social">
+          <h2>Ola</h2>
+        </div>
+
       </section>
     </footer>
 
