--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <div class="cara">
       <img src="./jose.jpg"/>
       <h1><em>José Roberto Pinto da Silva, PhD</em></h1>
-      <a href="english" target="_blank"><button class="botao_topo">English</button></a>
-      <a href="curriculo" download="curriculo"><button class="botao_topo">Currículo</button></a>
+      <div class="meio">
+        <a href="english" target="_blank"><button class="botao_topo">English</button></a>
+        <a href="curriculo" download="curriculo"><button class="botao_topo">Currículo</button></a>
+      </div>
     </div>
   </div>
 
@@ -46,8 +48,9 @@
         de matérias de Engenharia Elétrica por 41 anos na UFPR, onde fui homenageado. Também dei aula na Universidade Positivo como professor de Pós-graduação
         e em seminários internacionais.
 
-
-        <br><a href="./materias.html" target="_blank"><button class="button_materias">Matérias Ensinadas</button></a><br>
+        <div class="meio">
+          <a href="./materias.html" target="_blank"><button class="button_materias">Matérias Ensinadas</button></a>
+        </div>
 
         <br><br>Minha carreira como engenheiro começou ainda como estudante - na Metalúrgica Guaíra. Depois de trabalhar em outras empresas de renome,
         decidi seguir minha carreira na COPEL Transmissão e Geração S.A. Na COPEL, fui <em>Engenheiro Senior</em> e trabalhei por 41 anos. Gerente, supervisor de área,
@@ -55,6 +58,7 @@
 
         <br><br>Também sou autor e co-autor de artigos técnicos, participando de seminários, congressos e cursos pelo <a href="https://www.cigre.org/" target="_blank">CIGRÉ Brasil</a> e membro
         do <em>Comitê de Análise de Projetos em Pesquisa e Desenvolvimento</em>.<br><br>
+
     </section>
 
     <section id="estudo">
@@ -119,21 +123,20 @@
           <li>Viajar</li>
           <li>Jogar futebol</li>
           <li>Ver meu filho, filha e netos</li>
-          <a href="fun.html" target="_blank"><button class="botao_atividades">Saber Mais</button></a>
+          <div class="meio">
+            <a href="fun.html" target="_blank"><button class="botao_atividades">Saber Mais</button></a>
+          </div>
         </ul>
     </section>
 
     <footer>
       <section id="contato">
-
         <div class="entrar_contato">
         <h2>Para entrar em contato comigo:</h2>
-          <a href="mailto:josejrps@gmail.com" target="_blank"><button>Entre em Contato</button></a>
-          <a href="http://lattes.cnpq.br/9257650962986363" target="_blank"><button>Currículo Lattes</button></a>
-        </div>
-
-        <div class="media_social">
-          <h2>Ola</h2>
+          <div class="meio">
+            <a href="mailto:josejrps@gmail.com" target="_blank"><button class="botao_contato">Entre em Contato</button></a>
+            <a href="http://lattes.cnpq.br/9257650962986363" target="_blank"><button class="botao_contato">Currículo Lattes</button></a>
+          </div>
         </div>
 
       </section>
