--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>José Roberto Pinto da Silva, PhD</title>
     <link href="./stylesheet.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
 
 <body>
@@ -23,8 +24,8 @@
 
   <div class="topo">
     <div class="cara">
-      <img src="./jose.jpg"/>
-      <h1><em>José Roberto Pinto da Silva, PhD</em></h1>
+        <img src="./jose.jpg"/>
+        <h1><em>José Roberto Pinto da Silva, PhD</em></h1>
       <div class="meio">
         <a href="english" target="_blank"><button class="botao_topo">English</button></a>
         <a href="curriculo" download="curriculo"><button class="botao_topo">Currículo</button></a>
@@ -123,23 +124,36 @@
           <li>Viajar</li>
           <li>Jogar futebol</li>
           <li>Ver meu filho, filha e netos</li>
-          <div class="meio">
-            <a href="fun.html" target="_blank"><button class="botao_atividades">Saber Mais</button></a>
-          </div>
         </ul>
+        <div class="meio">
+          <a href="fun.html" target="_blank"><button class="botao_atividades">Saber Mais</button></a>
+        </div>
     </section>
 
     <footer>
+
       <section id="contato">
-        <div class="entrar_contato">
-        <h2>Para entrar em contato comigo:</h2>
+        <h2>Para Entrar em Contato Comigo:</h2>
+
           <div class="meio">
             <a href="mailto:josejrps@gmail.com" target="_blank"><button class="botao_contato">Entre em Contato</button></a>
             <a href="http://lattes.cnpq.br/9257650962986363" target="_blank"><button class="botao_contato">Currículo Lattes</button></a>
           </div>
-        </div>
+
+          <div class="meio">
+            <p>Email: josejrps@gmail.com</p>
+          </div>
+
+          <div class="meio">
+          <a href="https://www.linkedin.com/in/jose-roberto-pinto-da-silva-a64006112/" target="_blank"><i class="fa fa-linkedin"></a></i>
+          </div>
 
       </section>
+
+      <div class="meio">
+        <a href="https://github.com/renanmbs" target="_blank">Designed by: Renan Mougenot Breviglieri Silva</a>
+      </div>
+
     </footer>
 
   </body>
