--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
 
   </header>
 
-  <div class="topo">
-    <div class="cara">
-        <img src="./jose.jpg"/>
-        <h1><em>José Roberto Pinto da Silva, PhD</em></h1>
-      <div class="meio">
-        <a href="english" target="_blank"><button class="botao_topo">English</button></a>
-        <a href="curriculo" download="curriculo"><button class="botao_topo">Currículo</button></a>
+  <section id="contato">
+    <div class="topo">
+      <div class="cara">
+          <img src="./jose.jpg"/>
+          <h1><em>José Roberto Pinto da Silva, PhD</em></h1>
+        <div class="meio">
+          <a href="english" target="_blank"><button class="botao_topo">English</button></a>
+          <a href="curriculo" download="curriculo"><button class="botao_topo">Currículo</button></a>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 
     <section id="quem">
       <h2>Quem Sou Eu</h2>
@@ -145,7 +147,11 @@
           </div>
 
           <div class="meio">
-          <a href="https://www.linkedin.com/in/jose-roberto-pinto-da-silva-a64006112/" target="_blank"><i class="fa fa-linkedin"></a></i>
+            <a href="https://www.linkedin.com/in/jose-roberto-pinto-da-silva-a64006112/" target="_blank"><i class="fa fa-linkedin"></a></i>
+          </div>
+
+          <div class="meio">
+            <a href="#contato" class="cima">Scroll to the Top</a>
           </div>
 
       </section>
