--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>José Roberto Pinto da Silva, PhD</title>
     <link href="./stylesheet.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="icon" href="./logo.jpeg">
   </head>
 
 <body>
