--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>José Roberto Pinto da Silva, PhD</title>
+    <title>José Roberto Pinto da Silva, Ph.D.</title>
     <link href="./stylesheet.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="icon" href="./logo.jpeg">
@@ -22,14 +22,13 @@
     </nav>
 
   </header>
-
-  <section id="contato">
+    <section id="comeco">
     <div class="topo">
       <div class="cara">
           <img src="./jose.jpg"/>
-          <h1><em>José Roberto Pinto da Silva, PhD</em></h1>
+          <h1><em>José Roberto Pinto da Silva, Ph.D.</em></h1>
         <div class="meio">
-          <a href="english" target="_blank"><button class="botao_topo">English</button></a>
+          <a href="./english_page.html"><button class="botao_topo">English</button></a>
           <a href="curriculo" download="curriculo"><button class="botao_topo">Currículo</button></a>
         </div>
       </div>
@@ -38,40 +37,40 @@
 
     <section id="quem">
       <h2>Quem Sou Eu</h2>
-        <p>Nascido em Santiago, RS - sou um engenheiro eletricista, PhD e MBA - com ênfase em <strong><em>Sistema de Potência e Sistema de Controle</strong></em>.
-        <br>Filho de militar, decidi entrar na escola militar ainda quando pequeno, onde aprendi à seguir ordem e ser independente. Por mais que
+        <p>Nascido em Santiago, RS - sou um engenheiro eletricista, Ph.D. e MBA - com ênfase em <strong><em>Sistema de Potência e Sistema de Controle</em></strong>.
+        <br>Filho de militar, decidi entrar na escola militar ainda quando pequeno, onde aprendi a seguir ordem e ser independente. Por mais que
         minha família quisesse que eu seguisse nesse rumo, meus planos eram outros, então decidi trocar a carreira militar pela carreira de engenheiro.
 
         <br><br>Comecei meus estudos de <strong>Engenharia Elétrica</strong> na <em>Universidade Federal do Paraná</em>.
-        Enquanto isso, eu fui estagiário em diferentes empresas, e tive uma variadade de cargos importantes. De programador à gerente
+        Enquanto isso, eu fui estagiário em diferentes empresas, e tive uma variedade de cargos importantes. De programador à gerente
         de projeto, sempre fiz meu trabalho do melhor jeito possível, me comunicando bem com outros funcionários e trazendo a melhor solução possível
-        ao problema. Após isso, decidi continuar meus estudos, realizei meu mestrado, doutourado, MBA e outros
+        ao problema. Após isso, decidi continuar meus estudos, realizei meu mestrado, doutorado, MBA e outros
         cursos de liderança.
 
         <br><br>Enquanto estudante ainda, virei assistente de professor na universidade, e assim comecei minha carreira como professor. Dei aula
         de matérias de Engenharia Elétrica por 41 anos na UFPR, onde fui homenageado. Também dei aula na Universidade Positivo como professor de Pós-graduação
-        e em seminários internacionais.
+        e em seminários internacionais.</p>
 
         <div class="meio">
           <a href="./materias.html" target="_blank"><button class="button_materias">Matérias Ensinadas</button></a>
         </div>
 
-        <br><br>Minha carreira como engenheiro começou ainda como estudante - na Metalúrgica Guaíra. Depois de trabalhar em outras empresas de renome,
-        decidi seguir minha carreira na COPEL Transmissão e Geração S.A. Na COPEL, fui <em>Engenheiro Senior</em> e trabalhei por 41 anos. Gerente, supervisor de área,
+        <p>Minha carreira como engenheiro começou ainda como estudante - na Metalúrgica Guaíra. Após trabalhar em outras empresas de renome,
+        decidi seguir minha carreira na COPEL Transmissão e Geração S.A. Na COPEL, fui <em>Engenheiro Sênior</em> e trabalhei por 41 anos. Gerente, supervisor de área,
         e entre outros, foram cargos que trabalhei durante meu tempo na empresa - além da área técnica.
 
         <br><br>Também sou autor e co-autor de artigos técnicos, participando de seminários, congressos e cursos pelo <a href="https://www.cigre.org/" target="_blank">CIGRÉ Brasil</a> e membro
-        do <em>Comitê de Análise de Projetos em Pesquisa e Desenvolvimento</em>.<br><br>
+        do <em>Comitê de Análise de Projetos em Pesquisa e Desenvolvimento</em>.</p>
 
     </section>
 
     <section id="estudo">
     <h2>Qualificações</h2>
-      <h3>Durante minha carreira profissional, eu conquistei diversos títulos e prêmios. Minhas qualificações por meio de estudo são:</h3>
+      <h3>Durante minha carreira profissional, eu conquistei diversos títulos e prêmios. Minhas qualificações através de estudo são:</h3>
           <article>
           <ul>
             <li><a href="https://www.ufpr.br/portalufpr/" target="_blank"><img src="./ufpr.png" height=130 width=130/></a><br>
-            <p>Bachelorado em Engenharia Elétrica</p></li>
+            <p>Bacharelado em Engenharia Elétrica</p></li>
 
 
             <li><a href="https://ufsc.br/" target="_blank"><img src="./ufsc.png" heigh=130 width=130/></a><br>
@@ -82,11 +81,11 @@
             <p>Doutorado em Engenharia Elétrica</p></li>
 
             <li><a href="https://pos.fae.edu/curitiba" target="_blank"><img src="./fae.png" height=130 width=130/></a>
-            <p>MBA em economia</p></li>
+            <p>MBA em Economia</p></li>
 
             <li><a href="https://www.pucpr.br/" target="_blank"><img src="./Pucpr.jpeg" height=130 width=130/></a>
             <a href="Universidade do texas" target="_blank"><img src="texas.png"  height=130 width=130/></a>
-            <p>MBA em administração</p></li>
+            <p>MBA em Administração</p></li>
 
             <li><a href="https://www.haggai-international.org/" target="_blank"><img src="Haggai.png"  height=130 width=200/></a>
             <p>Seminário de Liderança</p></li>
@@ -99,11 +98,11 @@
     <h2>Onde Trabalhei?</h2>
       <ul>
         <li>Metalúrgica Guaíra</li>
-        <li>IBM</li>
-        <li>Universidade Federal do Paraná</li>
-        <li>Copel Transmissão S.A.</li>
-        <li>Copel Geração S.A.</li>
-        <li>Universidade Positivo</li>
+        <li><a href="https://www.ibm.com/us-en?ar=1" target="_blank">IBM</a></li>
+        <li><a href="https://www.copel.com/site/copel-transmissao/" target="_blank">Copel Transmissão S.A.</a></li>
+        <li><a href="https://www.copel.com/site/copel-geracao/" target="_blank">Copel Geração S.A.</a></li>
+        <li><a href="https://www.ufpr.br/portalufpr/" target="_blank">Universidade Federal do Paraná</a></li>
+        <li><a href="https://www.up.edu.br/" target="_blank">Universidade Positivo</a></li>
       </ul>
     </section>
 
@@ -112,7 +111,7 @@
       <h3>Durante minha carreira, fiz parte de grandes trabalhos e projetos, porém os meus favoritos foram:</h3>
         <ul>
           <li>Plano e Operação de Sistemas Elétricos de Potência</li>
-          <li>Plano de Expansão da Transmição de Sistemas Elétricos de Potência</li>
+          <li>Plano de Expansão da Transmissão de Sistemas Elétricos de Potência</li>
           <li>Operação de Usinas Hidroelétricas da Copel Geração</li>
           <li>Gerente de Pesquisa e Desenvolvimento</li>
           <li>Participação e elaboração do Projeto de Transmissão de Energia Elétrica - Energia Renovável</li>
@@ -144,21 +143,21 @@
           </div>
 
           <div class="meio">
-            <p>Email: josejrps@gmail.com</p>
+            <p>E-mail: josejrps@gmail.com</p>
           </div>
 
           <div class="meio">
-            <a href="https://www.linkedin.com/in/jose-roberto-pinto-da-silva-a64006112/" target="_blank"><i class="fa fa-linkedin"></a></i>
+            <a href="https://www.linkedin.com/in/jose-roberto-pinto-da-silva-a64006112/" target="_blank"><i class="fa fa-linkedin"></i></a>
           </div>
 
           <div class="meio">
-            <a href="#contato" class="cima">Scroll to the Top</a>
+            <a href="#comeco" class="cima"><p>Topo</p></a>
           </div>
 
       </section>
 
       <div class="meio">
-        <a href="https://github.com/renanmbs" target="_blank">Designed by: Renan Mougenot Breviglieri Silva</a>
+        <a href="https://github.com/renanmbs" target="_blank">Criado por: Renan Mougenot Breviglieri Silva</a>
       </div>
 
     </footer>
