--- a/english_page.html
+++ b/english_page.html
@@ -29,7 +29,7 @@
             <h1><em>José Roberto Pinto da Silva, Ph.D.</em></h1>
           <div class="meio">
             <a href="./index.html"><button class="botao_topo">Portuguese</button></a>
-            <a href="resumé" download="Resumé"><button class="botao_topo">Resumé</button></a>
+            <a href="./resume.pdf" download="Resumé"><button class="botao_topo">Resumé</button></a>
           </div>
         </div>
       </div>
@@ -48,7 +48,7 @@
         I also taught at Universidade Positivo as a Post-Graduate professor and at some international seminaries.</p>
 
         <div class="meio">
-          <a href="./materias.html" target="_blank"><button class="button_materias">Classes Taught</button></a>
+          <a href="./subjects.html" target="_blank"><button class="button_materias">Classes Taught</button></a>
         </div>
 
         <p>My career as an engineer started as a student still - at Metalúrgica Guaíra. After working at other big named companies,
