--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h1><em>José Roberto Pinto da Silva, Ph.D.</em></h1>
         <div class="meio">
           <a href="./english_page.html"><button class="botao_topo">English</button></a>
-          <a href="curriculo" download="curriculo"><button class="botao_topo">Currículo</button></a>
+          <a href="./curriculo.pdf" download="curriculo"><button class="botao_topo">Currículo</button></a>
         </div>
       </div>
     </div>
@@ -128,7 +128,7 @@
           <li>Ver meu filho, filha e netos</li>
         </ul>
         <div class="meio">
-          <a href="fun.html" target="_blank"><button class="botao_atividades">Saber Mais</button></a>
+          <a href="diversao.html" target="_blank"><button class="botao_atividades">Saber Mais</button></a>
         </div>
     </section>
 
