--- a/subjects.html
+++ b/subjects.html
@@ -11,21 +11,22 @@
 
 <table class="my_table">
 
-  <tbody class="my_table">
 
+  <tbody class="my_table">
     <tr>
       <th scope="row"><img src="./uni-ufpr.png" class="tabela_head"/><p><em>Universidade Federal </em></p></th>
-      <td>Sistema de Potência</td>
-      <td>Sistema de Controle Linear - Controle e Servomecânismos</td>
-      <td>Sistema de Controle Aplicado à Geração e <br>Transmissão de Energia Elétrica</td>
-      <td>Máquinas Elétricas</td>
+      <td>Electric Power Systems</td>
+      <td>Linear Control Systems -<br> Control and Servomechanisms</td>
+      <td>Control Systems Applied to <br>Power Generation and Transmission</td>
+      <td>Electric Machines</td>
     </tr>
 
     <tr>
       <th scope="row"><img src="./uni-positivo.png" class="tabela_head"/><p><em>Universidade Positivo </em></p></th>
-      <td colspan="4">Energias Renováveis</td>
+      <td colspan=4>Renewable Energy</td>
     </tr>
   </tbody>
 
 </table>
+
 </body>
