--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
         </div>
     </section>
 
+    <!-- <section id="folder">
+    <h2>Documentos</h2>
+      <h3>Documentos</h3>
+
+    </section> -->
+
     <footer>
 
       <section id="contato">
