--- a/english_page.html
+++ b/english_page.html
@@ -15,20 +15,20 @@
       <ul>
         <li><a href="#quem">Who Am I?</a></li>
         <li><a href="#estudo">Qualifications</a></li>
-        <li><a href="#trabalhos">Past Employers</a></li>
+        <li><a href="#trabalhos">Experience</a></li>
         <li><a href="#projetos">Important Projects</a></li>
         <li><a href="#atividades">Current Activities</a></li>
         <li><a href="#contato">Contact Me</a></li>
     </nav>
-
   </header>
+
     <section id="comeco">
       <div class="topo">
         <div class="cara">
             <img src="./jose.jpg"/>
             <h1><em>José Roberto Pinto da Silva, Ph.D.</em></h1>
           <div class="meio">
-            <a href="./index.html"><button class="botao_topo">Portuguese</button></a>
+            <a href="./index.html"><button class="botao_topo">Portugês</button></a>
             <a href="./resume.pdf" download="Resumé"><button class="botao_topo">Resumé</button></a>
           </div>
         </div>
@@ -89,9 +89,9 @@
     </section>
 
     <section id="trabalhos">
-    <h2>Past Employers</h2>
+    <h2>Experience</h2>
       <ul>
-        <li>Metalúrgica Guaíra</li>
+        <li>Siderúrgica Guaíra</li>
         <li><a href="https://www.ibm.com/us-en?ar=1" target="_blank">IBM</a></li>
         <li><a href="https://www.copel.com/site/copel-transmissao/" target="_blank">Copel Transmissão S.A.</a></li>
         <li><a href="https://www.copel.com/site/copel-geracao/" target="_blank">Copel Geração S.A.</a></li>
@@ -126,6 +126,17 @@
         </div>
     </section>
 
+    <section id="doc">
+        <h2>Dissertations And Documents</h2>
+        <h3>Access my dissertations here:</h3>
+
+        <ul>
+          <li><a href="./mest.pdf" target="_blank">Master's Dissertation</a></li>
+          <li><a href="./dout.pdf" target="_blank">Doctorate's Dissertation</a></li>
+        </ul>
+
+    </section>
+
     <footer>
 
       <section id="contato">
@@ -151,7 +162,7 @@
       </section>
 
       <div class="meio">
-        <a href="https://github.com/renanmbs" target="_blank">Designed by: Renan Mougenot Breviglieri Silva</a>
+        <a>Designed by: Renan Mougenot Breviglieri Silva</a>
       </div>
 
     </footer>
