--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section id="trabalhos">
     <h2>Onde Trabalhei?</h2>
       <ul>
-        <li>Metalúrgica Guaíra</li>
+        <li><a href="https://consultas.plus/lista-de-empresas/parana/curitiba/76486430000631-siderurgica-guaira-s-a/" target="_blank">Siderúrgica Guaíra S/a</li>
         <li><a href="https://www.ibm.com/us-en?ar=1" target="_blank">IBM</a></li>
         <li><a href="https://www.copel.com/site/copel-transmissao/" target="_blank">Copel Transmissão S.A.</a></li>
         <li><a href="https://www.copel.com/site/copel-geracao/" target="_blank">Copel Geração S.A.</a></li>
@@ -132,11 +132,16 @@
         </div>
     </section>
 
-    <!-- <section id="folder">
-    <h2>Documentos</h2>
-      <h3>Documentos</h3>
+    <section id="doc">
+        <h2>Dissertações e Documentos</h2>
+        <h3>Accesse aqui minhas dissertações e documentos interessantes da minha carreira</h3>
 
-    </section> -->
+        <ul>
+          <li><a href="./mest.pdf" target="_blank">Dissertação de Mestrado</a></li>
+          <li><a href="./dout.pdf" target="_blank">Dissertação de Doutorado</a></li>
+        </ul>
+
+    </section>
 
     <footer>
 
@@ -163,7 +168,7 @@
       </section>
 
       <div class="meio">
-        <a href="https://github.com/renanmbs" target="_blank">Criado por: Renan Mougenot Breviglieri Silva</a>
+        <a>Criado por: Renan Mougenot Breviglieri Silva</a>
       </div>
 
     </footer>
