--- a/english_page.html
+++ b/english_page.html
@@ -28,7 +28,7 @@
             <img src="./jose.jpg"/>
             <h1><em>José Roberto Pinto da Silva, Ph.D.</em></h1>
           <div class="meio">
-            <a href="./index.html"><button class="botao_topo">Portugês</button></a>
+            <a href="./index.html"><button class="botao_topo">Português</button></a>
             <a href="./resume.pdf" download="Resumé"><button class="botao_topo">Resumé</button></a>
           </div>
         </div>
@@ -51,7 +51,7 @@
           <a href="./subjects.html" target="_blank"><button class="button_materias">Classes Taught</button></a>
         </div>
 
-        <p>My career as an engineer started as a student still - at Metalúrgica Guaíra. After working at other big named companies,
+        <p>My career as an engineer started as a student still - at Siderúrgica Guaíra. After working at other big named companies,
         I decided to continue my career at COPEL Transmissão e Geração S.A. At COPEL, I was a <em>Senior Engineer</em> and I worked there for 41 years.
 
         <br><br>I am also a co-author of technical articles, being part of seminaries, congresses, and courses for <a href="https://www.cigre.org/" target="_blank">CIGRÉ Brasil</a>, and a member of
@@ -75,14 +75,14 @@
             <p>Doctorate in Electrical Engineering</p></li>
 
             <li><a href="https://pos.fae.edu/curitiba" target="_blank"><img src="./fae.png" height=130 width=130/></a>
-            <p>MBA in Economics</p></li>
+            <p>MBA <br>in Economics</p></li>
 
             <li><a href="https://www.pucpr.br/" target="_blank"><img src="./Pucpr.jpeg" height=130 width=130/></a>
             <a href="Universidade do texas" target="_blank"><img src="texas.png"  height=130 width=130/></a>
-            <p>MBA in Administration</p></li>
+            <p>MBA <br>in Administration</p></li>
 
             <li><a href="https://www.haggai-international.org/" target="_blank"><img src="Haggai.png"  height=130 width=200/></a>
-            <p>Leadership Seminary</p></li>
+            <p>Leadership<br>Seminary</p></li>
 
           </ul>
         </article>
