--- a/materias.html
+++ b/materias.html
@@ -13,6 +13,9 @@
 
   <tbody class="my_table">
 
+    <th scope="column">Universidade</th>
+    <th scope="column" colspan="4">Matérias</th>
+
     <tr>
       <th scope="row"><img src="./uni-ufpr.png" class="tabela_head"/><p><em>Universidade Federal </em></p></th>
       <td>Sistema de Potência</td>
