--- a/subjects.html
+++ b/subjects.html
@@ -11,6 +11,9 @@
 
 <table class="my_table">
 
+  <th scope="column">University</th>
+  <th scope="column" colspan="4">Classes</th>
+
 
   <tbody class="my_table">
     <tr>
