--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <a href="./materias.html" target="_blank"><button class="button_materias">Matérias Ensinadas</button></a>
         </div>
 
-        <p>Minha carreira como engenheiro começou ainda como estudante - na Metalúrgica Guaíra. Após trabalhar em outras empresas de renome,
+        <p>Minha carreira como engenheiro começou ainda como estudante - na Siderúrgica Guaíra. Após trabalhar em outras empresas de renome,
         decidi seguir minha carreira na COPEL Transmissão e Geração S.A. Na COPEL, fui <em>Engenheiro Sênior</em> e trabalhei por 41 anos. Gerente, supervisor de área,
         e entre outros, foram cargos que trabalhei durante meu tempo na empresa - além da área técnica.
 
@@ -73,22 +73,22 @@
             <p>Bacharelado em Engenharia Elétrica</p></li>
 
 
-            <li><a href="https://ufsc.br/" target="_blank"><img src="./ufsc.png" heigh=130 width=130/></a><br>
+            <li><a href="https://ufsc.br/" target="_blank"><img src="./ufsc.png" height=130 width=130/></a><br>
             <p>Mestrado em Engenharia Elétrica</p></li>
 
 
-            <li><a href="https://unifei.edu.br/" target="_blank"><img src="./EFEI.png" heigh=130 width=130/></a>
+            <li><a href="https://unifei.edu.br/" target="_blank"><img src="./EFEI.png" height=130 width=130/></a>
             <p>Doutorado em Engenharia Elétrica</p></li>
 
             <li><a href="https://pos.fae.edu/curitiba" target="_blank"><img src="./fae.png" height=130 width=130/></a>
-            <p>MBA em Economia</p></li>
+            <p>MBA <br>em Economia</p></li>
 
             <li><a href="https://www.pucpr.br/" target="_blank"><img src="./Pucpr.jpeg" height=130 width=130/></a>
             <a href="Universidade do texas" target="_blank"><img src="texas.png"  height=130 width=130/></a>
-            <p>MBA em Administração</p></li>
+            <p>MBA <br>em Administração</p></li>
 
-            <li><a href="https://www.haggai-international.org/" target="_blank"><img src="Haggai.png"  height=130 width=200/></a>
-            <p>Seminário de Liderança</p></li>
+            <li><a href="https://www.haggai-international.org/" target="_blank"><img src="Haggai.png"  height=130 width=300/></a>
+            <p>Seminário <br>de Liderança</p></li>
 
           </ul>
         </article>
